mengubah file home dan mengubah tata letak search box

--- a/html/(DEVICE) Dovpo MVV 2 Carbon Green.html
+++ b/html/(DEVICE) Dovpo MVV 2 Carbon Green.html
@@ -211,7 +211,7 @@
     <span>AZURAYA</span>
   </div>
   <nav>
-    <a href="home.html">Home</a>
+    <a href="index.html">Home</a>
     <div class="categories-dropdown">
       <a href="#">Categories</a>
       <div class="dropdown-menu">
