--- a/html/MINIKOPI.HTML
+++ b/html/MINIKOPI.HTML
@@ -212,7 +212,8 @@
         <div class="suggestions" id="suggestions"></div>
     </div>
     <nav>
-        <a href="home.html">Home</a>
+       
+        <a href="index.html">Home</a>
         <div class="categories-dropdown">
             <a href="#">Categories</a>
             <div class="dropdown-menu">
@@ -226,10 +227,7 @@
         <a href="produk.html">Products</a>
         <a href="TETOKAM.html">Tentang Kami</a>
     </nav>
-    <div class="search-box">
-        <input type="text" id="search-input" placeholder="Search for products, brands, or shops..." oninput="showSuggestions()">
-        <div class="suggestions" id="suggestions"></div>
-    </div>
+
 </header>
 
 <section class="products">
