--- a/html/Atomizer.html
+++ b/html/Atomizer.html
@@ -201,9 +201,15 @@
     <div class="logo">
         <img src="logo-1.png" alt="Azuraya Logo">
         <span>AZURAYA</span>
+        
+    </div>
+    <div class="search-box">
+        <input type="text" id="search-input" placeholder="Search for products, brands, or shops..." oninput="showSuggestions()">
+        <div class="suggestions" id="suggestions"></div>
     </div>
     <nav>
-        <a href="home.html">Home</a>
+      
+        <a href="index.html">Home</a>
         <div class="categories-dropdown">
             <a href="#">Categories</a>
             <div class="dropdown-menu">
@@ -217,10 +223,7 @@
         <a href="produk.html">Products</a>
         <a href="TETOKAM.html">Tentang Kami</a>
     </nav>
-    <div class="search-box">
-        <input type="text" id="search-input" placeholder="Search for products, brands, or shops..." oninput="showSuggestions()">
-        <div class="suggestions" id="suggestions"></div>
-    </div>
+  
 </header>
 
 <section class="products">
