--- a/html/device.html
+++ b/html/device.html
@@ -207,7 +207,7 @@
     <div class="suggestions" id="suggestions"></div>
 </div>
   <nav>
-    <a href="home.html">Home</a>
+    <a href="index.html">Home</a>
     <div class="categories-dropdown">
       <a href="#">Categories</a>
       <div class="dropdown-menu">
